--- a/administrativa.html
+++ b/administrativa.html
@@ -436,8 +436,8 @@
 						</ul>
 					</section>
 					<section data-background="img/admi/cont.png">
-						<img src="img/admi/sistema.png" alt="http://www.monografias.com/trabajos98/los-sistemas-informacion-gerencial/image013.png">
-						<p><a href="http://www.monografias.com/trabajos98/los-sistemas-informacion-gerencial/image013.png" target="_blank"><small>[Ver mas grande]</small></a></p>
+						<img src="img/admi/arnold/sistema.jpg">
+						<p><a href="img/admi/arnold/sistema.jpg" target="_blank"><small>[Ver mas grande]</small></a></p>
 					</section>
 				</section>
 				<section>
